--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -15,7 +15,7 @@
                 <div class="col-lg-10 col-sm-10">
                     <div class="card-body" style="width: 100%; padding-top: 56px; padding-bottom: 22px;">
                         <h5 class="card-title text-style-big" style="margin-bottom: 10px;">Welcome back!</h5>
-                        <p class="text-style-middle card-text" style="margin-bottom: 33px;">Don't have an account?<a
+                        <p class="text-style-middle card-text" style="margin-bottom: 33px;">Don't have an account?<a href="{% url 'register' %}"
                                 style="color: #FF6B2C; padding-left: 10px;">Sign-up</a></p>
                         <form method="POST">
                             {% csrf_token %}
