--- a/templates/commons/signup.html
+++ b/templates/commons/signup.html
@@ -3,210 +3,6 @@
 
 
 
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#    <head>#}
-{#        <meta charset="utf-8">#}
-{#        <meta name="viewport" content="width=device-width, initial-scale=1">#}
-{#        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">#}
-{##}
-{#        <script src="https://kit.fontawesome.com/b1a21454b8.js" crossorigin="anonymous"></script>#}
-{#        <link rel="stylesheet" href="/fonts/fontawesome-free-5.3.1-web/css/all.css">#}
-{##}
-{#        <link href='https://fonts.googleapis.com/css?family=Racing Sans One' rel='stylesheet'>#}
-{#        <link rel="preconnect" href="https://fonts.googleapis.com">#}
-{#        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>#}
-{#        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">#}
-{##}
-{#        <style>#}
-{#           #}
-{#            html, body {#}
-{#                height: 100%;#}
-{#            }#}
-{##}
-{#            body {#}
-{#                display: flex;                          #}
-{#            }#}
-{##}
-{#            .first-container {#}
-{#                background-image: linear-gradient(to right, #ED1C24 , #FF6B2C);#}
-{#            }#}
-{#           #}
-{#            .text-style-large {#}
-{#                font-size: 68px;#}
-{#                font-family: 'Racing Sans One';#}
-{#                line-height: 85px;#}
-{#                color: white;#}
-{#                text-align: center;#}
-{#                #}
-{#            }#}
-{##}
-{#            .navbar-custom {#}
-{#                background-image: linear-gradient(to right, #ED1C24 , #FF6B2C);#}
-{#                height: 86px;#}
-{#                color: white;#}
-{#            }#}
-{##}
-{#            .container-custom {#}
-{#                background-color: #F1F6F6; #}
-{#                border-radius: 20px;#}
-{#            }#}
-{##}
-{#            ::placeholder {#}
-{#                font-size: 16px;#}
-{#                font-family: 'Roboto';#}
-{#                font-weight: 300;#}
-{#                color: #5E6B78;#}
-{#                padding-left: 18px;#}
-{#                #}
-{#            }#}
-{##}
-{#            .text-style-big {#}
-{#                font-size: 32px;#}
-{#                font-family: 'Racing Sans One';#}
-{#                color: #100F0E;#}
-{#                line-height: 40px;#}
-{#            }#}
-{##}
-{#            .text-style-middle {#}
-{#                font-size: 16px;#}
-{#                font-family: 'Roboto';#}
-{#                color: #100F0E;#}
-{#                line-height: 20px;#}
-{#            }#}
-{##}
-{#            .text-style-small {#}
-{#                font-size: 14px;#}
-{#                font-family: 'Roboto';#}
-{#                color: #100F0E;#}
-{#                line-height: 16px;#}
-{#            }#}
-{##}
-{#            .text-style-small-light {#}
-{#                font-size: 14px;#}
-{#                font-family: 'Roboto';#}
-{#                color: #100F0E;#}
-{#                line-height: 16px;#}
-{#                font-weight: 300 ;#}
-{#            }#}
-{##}
-{#            .input-box {#}
-{#                border-radius: 6px;#}
-{#                width: 100%; #}
-{#                height: 48px; #}
-{#                border: none; #}
-{#                box-sizing: border-box;#}
-{#                vertical-align: middle;#}
-{#            }#}
-{##}
-{#            .button-custom-style {#}
-{#                background-color: #FF6B2C; #}
-{#                border: none; #}
-{#                color: white; #}
-{#                height: 48px; #}
-{#                border-radius: 6px; #}
-{#                margin-bottom: 22px;#}
-{#                #}
-{#            }#}
-{##}
-{#            input[id="cb1"] {#}
-{#  display: inline;#}
-{#  width: 14px;#}
-{#  height: 14px;#}
-{##}
-{#  border: 2px solid #FF6B2C;#}
-{#  border-radius: 2px;#}
-{#}#}
-{##}
-{#           #}
-{#            /* [type="checkbox"]:not(:checked){#}
-{#  #}
-{#  #}
-{#  border: 1px solid red;#}
-{#  outline: red;#}
-{#} */#}
-{#            #}
-{#        </style>#}
-{#    </head>#}
-{#    <body>#}
-{#        <div class="container-fluid row" style="height: 100%;"></div>#}
-{#            #}
-{#            <div class=" first-container container-fluid col-lg-6 d-flex justify-content-center">#}
-{#                <div class="d-flex flex-column container-fluid align-items-center justify-content-center">#}
-{#                <p class="text-style-large">"My job is to know what other people don't know."</p>#}
-{#                <p style="margin-top: 50px;" class="text-style-large">SCHERLOOK 3000</p>#}
-{#            </div>#}
-{#                #}
-{#            </div>#}
-{#           #}
-{#            <div class="col-lg-6" style="display: flex; flex-direction: column; height: 100%;">#}
-{#                <header>#}
-{#                <nav class="navbar navbar-expand-lg navbar-custom">#}
-{#                    <div class="container-fluid">                        #}
-{#                        <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">                            #}
-{#                            <div class="navbar-nav ms-auto">#}
-{#                                <div class="nav-item ms-auto">#}
-{#                                    <a class="nav-link active" aria-current="page" href="#">#}
-{#                                        <i style="color: white;" class="fa-regular fa-user"></i>#}
-{#                                    </a>  #}
-{#                                </div>                         #}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </nav> #}
-{#                </header>#}
-{##}
-{#                #}
-{#                    <div class="d-flex container-fluid align-items-center justify-content-center" style="flex-grow: 1;">#}
-{#                        <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">#}
-{#                            <div class="container-custom card col-lg-9 col-md-10 col-sm-12">#}
-{#                                <div class="row justify-content-center">#}
-{#                                    <div class="col-lg-11 col-sm-10">#}
-{#                                        <div class="card-body" style="width: 100%; padding-top: 56px; padding-bottom: 22px;">#}
-{#                                            <h5 class="card-title text-style-big" style="margin-bottom: 10px;">Create new account.</h5>#}
-{#                                            <p class="text-style-middle card-text" style="margin-bottom: 33px;">Already have an account?<a style="color: #FF6B2C; padding-left: 10px;">Log in</a></p>#}
-{#                                            <p class="card-text text-style-small-light" style="margin-bottom: 8px;">E-mail</p>#}
-{#                                            <form method="POST">#}
-{#                {% csrf_token %}#}
-{#                {{form | crispy}}#}
-{#              </form>#}
-{#                                            <form style="margin-bottom: 34px; border-color: #FF6B2C;">#}
-{#                                                <input id="cb1" style="border-color: #FF6B2C;" type="checkbox">#}
-{#                                                <label for="cb1">I agree to platform's <a href="">Terms of service and privacy policy</a></label>#}
-{#                                            </form>#}
-{#                                            #}
-{#                                            <div class="" style="display: flex; justify-content: space-between;">#}
-{#                                                #}
-{#                                            <button type="submit" style="width: 100%; margin-right: 5px;" class="button-custom-style">#}
-{#                                                <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>#}
-{#                                                Sign-up#}
-{#                                            </button>#}
-{#                                            <button type="submit" style="width: 100%; margin-left: 5px;" class="button-custom-style">#}
-{#                                                <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>#}
-{#                                                Log-in#}
-{#                                            </button>#}
-{#                                            </div>#}
-{#                                            <hr style="color: #5E6B78;">                                       #}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{##}
-{#                #}
-{##}
-{#            </div>#}
-{#        #}
-{#    </body>#}
-{##}
-{#</html>#}
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -238,18 +34,39 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+
+                var checkbox_input = document.querySelector('#cb1');
+                document.querySelector('#signup-button').disabled = true;
+
+                checkbox_input.addEventListener('change', e => {
+                    if (e.target.checked === true) {
+                        document.querySelector('#signup-button').disabled = false;
+                    } else {
+                        document.querySelector('#signup-button').disabled = true;
+                    }
+                })
+
+            })
+        </script>
+        
+        
         <style>
 
             html, body {
-                height: 100%;
+                
             }
 
             body {
                 display: flex;
+                
             }
 
             .first-container {
                 background-image: linear-gradient(to right, #ED1C24 , #FF6B2C);
+                
+                
             }
 
             .text-style-large {
@@ -339,12 +156,7 @@
 }
 
 
-            /* [type="checkbox"]:not(:checked){
 
-
-  border: 1px solid red;
-  outline: red;
-} */
 
         </style>
 
@@ -352,9 +164,9 @@
 
 <body>
 
-  <div class="container-fluid row" style="height: 100%;"></div>
+  <div class="container-fluid row" style=""></div>
 
-            <div class=" first-container container-fluid col-lg-6 d-flex justify-content-center">
+            <div class=" first-container container-fluid col-lg-6 d-flex justify-content-center" style=" overflow: auto;">
                 <div class="d-flex flex-column container-fluid align-items-center justify-content-center">
                 <p class="text-style-large">"My job is to know what other people don't know."</p>
                 <p style="margin-top: 50px;" class="text-style-large">SCHERLOOK 3000</p>
@@ -362,7 +174,7 @@
 
             </div>
 
-            <div class="col-lg-6" style="display: flex; flex-direction: column; height: 100%;">
+            <div class="col-lg-6 px-0" style="display: flex; flex-direction: column; height: 100%;">
                 <header>
                 <nav class="navbar navbar-expand-lg navbar-custom">
                     <div class="container-fluid">
@@ -380,36 +192,32 @@
                 </header>
 
 
-                    <div class="d-flex container-fluid align-items-center justify-content-center" style="flex-grow: 1;">
+                    <div class="d-flex container-fluid align-items-center justify-content-center" style="flex-grow: 1; margin-top: 30px; margin-bottom: 30px;">
                         <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">
-                            <div class="container-custom card col-lg-9 col-md-10 col-sm-12">
+                            <div class="container-custom card col-lg-10 col-md-10 col-sm-12">
                                 <div class="row justify-content-center">
                                     <div class="col-lg-11 col-sm-10">
                                         <div class="card-body" style="width: 100%; padding-top: 56px; padding-bottom: 22px;">
                                             <h5 class="card-title text-style-big" style="margin-bottom: 10px;">Create new account.</h5>
                                             <p class="text-style-middle card-text" style="margin-bottom: 33px;">Already have an account?<a style="color: #FF6B2C; padding-left: 10px;">Log in</a></p>
-                                            <p class="card-text text-style-small-light" style="margin-bottom: 8px;">E-mail</p>
                                             <form method="POST">
-                {% csrf_token %}
-                {{form | crispy}}
-              </form>
-                                            <form style="margin-bottom: 34px; border-color: #FF6B2C;">
+                                                {% csrf_token %}
+                                                {% for field in form %}
+                                                    <label class="text-style-small-light" style="margin-bottom: 8px;">{{field.label}}</label>
+                                                    {{field }}
+                                                {% endfor %}
                                                 <input id="cb1" style="border-color: #FF6B2C;" type="checkbox">
-                                                <label for="cb1">I agree to platform's <a href="">Terms of service and privacy policy</a></label>
+                                                <label for="cb1">I agree to platform's <a href="">Terms of service and privacy policy</a></label> 
+                                                
+
+                                                    <button id="signup-button" type="submit" style="width: 100%; margin-top: 34px;" class="button-custom-style">
+                                                        <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
+                                                        Sign-up
+                                                    </button>
                                             </form>
-
-                                            <div class="" style="display: flex; justify-content: space-between;">
-
-                                            <button type="submit" style="width: 100%; margin-right: 5px;" class="button-custom-style">
-                                                <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
-                                                Sign-up
-                                            </button>
-{#                                            <button type="submit" style="width: 100%; margin-left: 5px;" class="button-custom-style">#}
-{#                                                <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>#}
-{#                                                Log-in#}
-{#                                            </button>#}
-                                            </div>
                                             <hr style="color: #5E6B78;">
+                                            </div>
+                                            
                                         </div>
                                     </div>
                                 </div>
