--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -25,7 +25,7 @@
         </div>
         
     </div>
-    <div class="row d-flex mt-5">
+    <div class="row d-flex mt-5 pb-5">
         <div class="col-lg-3 justify-content-center">
             <div class="p-4" style="background-color: #FFA8A8; border-radius: 6px;">
                 <span class="text-style-middle-outlined">NOTIFICATIONS</span>
