--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -36,7 +36,7 @@
     <body>
         <header>
         <nav class="navbar navbar-expand-lg navbar-custom">
-            <div class="container-fluid">
+            <div class="container-fluid px-5">
                 <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent">
                     <div class="d-flex">
                         <a class="nav-link active" aria-current="page" href="#" style="font-family: 'Roboto'; font-size: 21.5px; font-weight: 700;">
