--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -48,7 +48,7 @@
             <div class="mb-5" style="width: 100%;">
                 <div style="display: flex; justify-content: space-between;">
                                             
-                    <button style="width: 100%; margin-right: 15px;" class="button-box-style text-style-middle-2">
+                    <button onclick="location.href={% url 'search' %}" style="width: 100%; margin-right: 15px;" class="button-box-style text-style-middle-2">
                         SHERLOOK APP
                     </button>
                     <button style="width: 100%; margin-left: 15px; margin-right: 15px;" class="button-box-style text-style-middle-2">
