--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -42,7 +42,7 @@
             <div class="container-fluid px-5">
                 <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent">
                     <div class="d-flex">
-                        <a class="nav-link active" aria-current="page" href="#" style="font-family: 'Roboto'; font-size: 21.5px; font-weight: 700;">
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}" style="font-family: 'Roboto'; font-size: 21.5px; font-weight: 700;">
                             Home
                         </a>
                     </div>
@@ -53,12 +53,12 @@
                     </div>
                     <div>
                         <div style="float: left; padding-right: 20px;" class="d-flex">
-                            <a class="nav-link active" aria-current="page" href="#">
+                            <a class="nav-link active" aria-current="page" href="{% url 'payment' %}">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </a>
                         </div>
                         <div style="float: right;" class="d-flex">
-                            <a class="nav-link active" aria-current="page" href="#">
+                            <a class="nav-link active" aria-current="page" href="{% url 'profile' %}">
                                 <i class="fa-regular fa-user"></i>
                             </a>
                         </div>
